--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1774,6 +1774,7 @@ _role:
     ltlAvailable: "ローカルタイムラインの閲覧"
     canPublicNote: "パブリック投稿の許可"
     canEditNote: "ノートの編集"
+    canImportNotes: "ノートのインポートが可能"
     canInvite: "サーバー招待コードの発行"
     inviteLimit: "招待コードの作成可能数"
     inviteLimitCycle: "招待コードの発行間隔"
