--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -6,8 +6,8 @@ noteEdited: "Note are now edited."
 removeModalBgColorForBlur: "Remove modal background color"
 skipThisVersion: "Skip this release"
 enableReceivePrerelease: "Get notified of pre-release versions"
-youAreRunningBetaClient: "Unreleased version of CherryPick in use!"
-cherrypickUpdate: "CherryPick Update"
+youAreRunningBetaClient: "Unreleased version of Re:Lovers in use!"
+cherrypickUpdate: "Re:Lovers Update"
 allMediaNoteCollapse: "Collapse all media notes"
 showingAnimatedImagesDescription: "When set to \"Animate on interaction\", the image will play when you hover over it or touch it."
 showFixedPostFormInReplies: "Show posting form in replies"
@@ -27,7 +27,7 @@ showSubNoteFooterButtonDescription: "Enabling this setting will show an action b
 alreadyFollowed: "You've been followed!"
 enableMarkByDate: "Show note times as dates"
 renoteConfirm: "Do you want to renote?"
-renoteConfirmDescription: "You can change this setting in \"Settings - CherryPick\"."
+renoteConfirmDescription: "You can change this setting in \"Settings - Re:Lovers\"."
 inviteRevoke: "Revoke All Invitation Codes"
 inviteRevokeConfirm: "Are you sure that you want to revoke all invitation codes?"
 enableAbsoluteTime: "Enable Absolute Time"
@@ -51,8 +51,8 @@ cherrypickUpdatedCacheClearTitle: "Clear the cache?"
 cherrypickUpdatedCacheClear: "It is <b>recommended to clear the cache</b> after the client is updated, as changes such as theme, color, and locale may not be reflected properly.\nYour account login status remains the same!"
 cherrypickUpdatedCacheClearLater: "If you want to clear the cache later, you can do it in <b>Settings</b> - <b>Clear Cache</b>!"
 headlineMisskey: "A network connected by notes"
-introMisskey: "Welcome! CherryPick is an open source, decentralized microblogging service.\nCreate \"notes\" to share your thoughts with everyone around you. 📡\nWith \"reactions\", you can also quickly express your feelings about everyone's notes. 👍\nLet's explore a new world! 🚀"
-poweredByMisskeyDescription: "{name} is one of the services powered by the open source platform <b>CherryPick</b> (referred to as a \"CherryPick instance\")."
+introMisskey: "Welcome! Re:Lovers is an open source, decentralized microblogging service.\nCreate \"notes\" to share your thoughts with everyone around you. 📡\nWith \"reactions\", you can also quickly express your feelings about everyone's notes. 👍\nLet's explore a new world! 🚀"
+poweredByMisskeyDescription: "{name} is one of the services powered by the open source platform <b>Re:Lovers</b> (referred to as a \"Re:Lovers instance\")."
 monthAndDay: "{month}/{day}"
 search: "Search"
 notifications: "Notifications"
@@ -218,7 +218,7 @@ youCanCleanRemoteFilesCache: "You can clear the cache by clicking the 🗑️ bu
 cacheRemoteSensitiveFiles: "Cache sensitive remote files"
 cacheRemoteSensitiveFilesDescription: "When this setting is disabled, sensitive remote files are loaded directly from the remote instance without caching."
 flagAsBot: "Mark this account as a bot"
-flagAsBotDescription: "Enable this option if this account is controlled by a program. If enabled, it will act as a flag for other developers to prevent endless interaction chains with other bots and adjust CherryPick's internal systems to treat this account as a bot."
+flagAsBotDescription: "Enable this option if this account is controlled by a program. If enabled, it will act as a flag for other developers to prevent endless interaction chains with other bots and adjust Re:Lovers's internal systems to treat this account as a bot."
 flagAsCat: "Mark this account as a cat"
 flagAsCatDescription: "Enable this option to mark this account as a cat."
 flagShowTimelineReplies: "Show replies in timeline"
@@ -281,7 +281,7 @@ noUsers: "There are no users"
 editProfile: "Edit profile"
 noteDeleteConfirm: "Are you sure you want to delete this note?"
 pinLimitExceeded: "You cannot pin any more notes"
-intro: "Installation of CherryPick has been finished! Please create an admin user."
+intro: "Installation of Re:Lovers has been finished! Please create an admin user."
 done: "Done"
 processing: "Processing..."
 preview: "Preview"
@@ -469,7 +469,7 @@ exploreFediverse: "Explore the Fediverse"
 popularTags: "Popular tags"
 userList: "Lists"
 about: "About"
-aboutMisskey: "About CherryPick"
+aboutMisskey: "About Re:Lovers"
 administrator: "Administrator"
 token: "Token"
 2fa: "Two-factor authentication"
@@ -637,7 +637,7 @@ sort: "Sorting order"
 ascendingOrder: "Ascending"
 descendingOrder: "Descending"
 scratchpad: "Scratchpad"
-scratchpadDescription: "The Scratchpad provides an environment for AiScript experiments. You can write, execute, and check the results of it interacting with CherryPick in it."
+scratchpadDescription: "The Scratchpad provides an environment for AiScript experiments. You can write, execute, and check the results of it interacting with Re:Lovers in it."
 output: "Output"
 script: "Script"
 disablePagesScript: "Disable AiScript on Pages"
@@ -769,7 +769,7 @@ unclip: "Unclip"
 confirmToUnclipAlreadyClippedNote: "This note is already part of the \"{name}\" clip. Do you want to remove it from this clip instead?"
 public: "Public"
 private: "Private"
-i18nInfo: "CherryPick is being translated into various languages by volunteers. You can help at {link}."
+i18nInfo: "Re:Lovers is being translated into various languages by volunteers. You can help at {link}."
 manageAccessTokens: "Manage access tokens"
 accountInfo: "Account Info"
 notesCount: "Number of notes"
@@ -825,7 +825,7 @@ onlineUsersCount: "{n} users are online"
 nUsers: "{n} Users"
 nNotes: "{n} Notes"
 sendErrorReports: "Send error reports"
-sendErrorReportsDescription: "When turned on, detailed error information will be shared with CherryPick when a problem occurs, helping to improve the quality of CherryPick.\nThis will include information such the version of your OS, what browser you're using, your activity in CherryPick, etc."
+sendErrorReportsDescription: "When turned on, detailed error information will be shared with Re:Lovers when a problem occurs, helping to improve the quality of Re:Lovers.\nThis will include information such the version of your OS, what browser you're using, your activity in Re:Lovers, etc."
 myTheme: "My theme"
 backgroundColor: "Background color"
 accentColor: "Accent color"
@@ -920,7 +920,7 @@ troubleshooting: "Troubleshooting"
 useBlurEffect: "Use blur effects in the UI"
 useBlurEffectDescription: "When enabled, you can use more beautiful themes!"
 learnMore: "Learn more"
-misskeyUpdated: "CherryPick has been updated!"
+misskeyUpdated: "Re:Lovers has been updated!"
 whatIsNew: "Show changes"
 translate: "Translate"
 translatedFrom: "Translated from {x}"
@@ -1051,8 +1051,8 @@ numberOfLikes: "Likes"
 show: "Show"
 neverShow: "Don't show again"
 remindMeLater: "Maybe later"
-didYouLikeMisskey: "Have you taken a liking to CherryPick?"
-pleaseDonate: "{host} uses the free software, CherryPick. We would highly appreciate your donations so development of CherryPick can continue!"
+didYouLikeMisskey: "Have you taken a liking to Re:Lovers?"
+pleaseDonate: "{host} uses the free software, Re:Lovers. We would highly appreciate your donations so development of Re:Lovers can continue!"
 roles: "Roles"
 role: "Role"
 noRole: "Role not found"
@@ -1167,7 +1167,7 @@ rolesThatCanBeUsedThisEmojiAsReactionPublicRoleWarn: "These roles must be public
 cancelReactionConfirm: "Really delete your reaction?"
 changeReactionConfirm: "Really change your reaction?"
 later: "Later"
-goToMisskey: "To CherryPick"
+goToMisskey: "To Re:Lovers"
 additionalEmojiDictionary: "Additional emoji dictionaries"
 installed: "Installed"
 branding: "Branding"
@@ -1287,7 +1287,7 @@ _group:
   banishConfirm: "Do you really want to banish \"{name}\" from \"{group}\"?"
 _cherrypick:
   function: "Proprietary Functions"
-  functionDescription: "Enables or disables proprietary features that CherryPick adds."
+  functionDescription: "Enables or disables proprietary features that Re:Lovers adds."
   nickname: "Nickname function"
   nicknameDescription: "On the user page, you can change the user's name to anything you like by clicking or tapping on it. The change will be reflected only to you.\nThis can be used to identify users who change their names frequently."
   useEnterToSend: "Press Enter to send"
@@ -1337,7 +1337,7 @@ _initialAccountSetting:
   pushNotificationDescription: "Enabling push notifications will allow you to receive notifications from {name} directly on your device."
   initialAccountSettingCompleted: "Profile setup complete!"
   haveFun: "Enjoy {name}!"
-  youCanContinueTutorial: "You can proceed to a tutorial on how to use {name} (CherryPick) or you can exit the setup here and start using it immediately."
+  youCanContinueTutorial: "You can proceed to a tutorial on how to use {name} (Re:Lovers) or you can exit the setup here and start using it immediately."
   startTutorial: "Start Tutorial"
   skipAreYouSure: "Really skip profile setup?"
   skipAreYouSureDescription: "If you interrupt initialization now, you can resume it at [More! - Help - Replay initial setting]."
@@ -1349,10 +1349,10 @@ _initialTutorial:
   skipAreYouSure: "Quit Tutorial?"
   _landing:
     title: "Welcome to the Tutorial"
-    description: "Here, you can learn the basics of using CherryPick and its features."
+    description: "Here, you can learn the basics of using Re:Lovers and its features."
   _note:
     title: "What is a Note?"
-    description: "Posts on CherryPick are called 'Notes.' Notes are arranged chronologically on the timeline and are updated in real-time."
+    description: "Posts on Re:Lovers are called 'Notes.' Notes are arranged chronologically on the timeline and are updated in real-time."
     reply: "Click on this button to reply to a message. It's also possible to reply to replies, continuing the conversation like a thread."
     renote: "You can share that note to your own timeline. You can also quote them with your comments."
     like: "You can add heart reactions to the Note. which is useful if you want to quickly leave a \"like!\"."
@@ -1368,7 +1368,7 @@ _initialTutorial:
     reactDone: "You can undo a reaction by pressing the '-' button."
   _timeline:
     title: "The Concept of Timelines"
-    description1: "CherryPick provides multiple timelines based on usage (some may not be available depending on the server's policies)."
+    description1: "Re:Lovers provides multiple timelines based on usage (some may not be available depending on the server's policies)."
     home: "You can view notes from accounts you follow."
     local: "You can view notes from all users on this server."
     social: "Notes from the Home and Local timelines will be displayed."
@@ -1377,7 +1377,7 @@ _initialTutorial:
     description3: "Additionally, there are list timelines and channel timelines. For more details, please refer to {link}."
   _postNote:
     title: "Note Posting Settings"
-    description1: "When posting a note on CherryPick, various options are available. The posting form looks like this."
+    description1: "When posting a note on Re:Lovers, various options are available. The posting form looks like this."
     _visibility:
       description: "You can limit who can view your note."
       public: "Your note will be visible for all users."
@@ -1405,7 +1405,7 @@ _initialTutorial:
     doItToContinue: "Mark the attachment file as sensitive to proceed."
   _done:
     title: "The tutorial is complete! 🎉"
-    description: "The functions introduced here are just a small part. For a more detailed understanding of using CherryPick, please refer to {link}."
+    description: "The functions introduced here are just a small part. For a more detailed understanding of using Re:Lovers, please refer to {link}."
 _timelineDescription:
   home: "In the Home timeline, you can see notes from accounts you follow."
   local: "In the Local timeline, you can see notes from all users on this server."
@@ -1457,7 +1457,7 @@ _accountMigration:
   moveTo: "Migrate this account to a different one"
   moveToLabel: "Account to move to:"
   moveCannotBeUndone: "Account migration cannot be undone."
-  moveAccountDescription: "This will migrate your account to a different one.\n　・Followers from this account will automatically be migrated to the new account\n　・This account will unfollow all users it is currently following\n　・You will be unable to create new notes etc. on this account\n\nWhile migration of followers is automatic, you must manually prepare some steps to migrate the list of users you are following. To do so, carry out a follows export that you will later import on the new account in the settings menu. The same procedure applies to your lists as well as your muted and blocked users.\n\n(This explanation applies to CherryPick v13.12.0 and later. Other ActivityPub software, such as Mastodon, might function differently.)"
+  moveAccountDescription: "This will migrate your account to a different one.\n　・Followers from this account will automatically be migrated to the new account\n　・This account will unfollow all users it is currently following\n　・You will be unable to create new notes etc. on this account\n\nWhile migration of followers is automatic, you must manually prepare some steps to migrate the list of users you are following. To do so, carry out a follows export that you will later import on the new account in the settings menu. The same procedure applies to your lists as well as your muted and blocked users.\n\n(This explanation applies to Re:Lovers and later. Other ActivityPub software, such as Mastodon, might function differently.)"
   moveAccountHowTo: "To migrate, first create an alias for this account on the account to move to.\nAfter you have created the alias, enter the account to move to in the following format: @username@server.example.com"
   startMigration: "Migrate"
   migrationConfirm: "Really migrate this account to {account}? Once started, this process cannot be stopped or taken back, and you will not be able to use this account in its original state anymore."
@@ -1468,9 +1468,9 @@ _achievements:
   earnedAt: "Unlocked at"
   _types:
     _notes1:
-      title: "just setting up my crpk"
+      title: "just setting up my Lovers"
       description: "Post your first note"
-      flavor: "Have a good time with CherryPick!"
+      flavor: "Have a good time with Re:Lovers!"
     _notes10:
       title: "Some notes"
       description: "Post 10 notes"
@@ -1566,7 +1566,7 @@ _achievements:
     _login1000:
       title: "Master of Notes III"
       description: "Log in for a total of 1,000 days"
-      flavor: "Thank you for using CherryPick!"
+      flavor: "Thank you for using Re:Lovers!"
     _noteClipped1:
       title: "Must... clip..."
       description: "Clip your first note"
@@ -1626,18 +1626,18 @@ _achievements:
       title: "Likes Achievements"
       description: "Look at your list of achievements for at least 3 minutes"
     _iLoveCherryPick:
-      title: "I Love CherryPick"
-      description: "Post \"I ❤ #CherryPick\""
-      flavor: "CherryPick's development team greatly appreciates your support!"
+      title: "I Love Re:Lovers"
+      description: "Post \"I ❤ #Re:Lovers\""
+      flavor: "Re:Lovers's development team greatly appreciates your support!"
     _foundTreasure:
       title: "Treasure Hunt"
       description: "You've found the hidden treasure"
     _client30min:
       title: "Short break"
-      description: "Keep CherryPick opened for at least 30 minutes"
+      description: "Keep Re:Lovers opened for at least 30 minutes"
     _client60min:
-      title: "No \"Miss\" in CherryPick"
-      description: "Keep CherryPick opened for at least 60 minutes"
+      title: "No \"Miss\" in Re:Lovers"
+      description: "Keep Re:Lovers opened for at least 60 minutes"
     _noteDeletedWithin1min:
       title: "Nevermind"
       description: "Delete a note within a minute of posting it"
@@ -1702,12 +1702,12 @@ _achievements:
     _brainDiver:
       title: "Brain Diver"
       description: "Post the link to Brain Diver"
-      flavor: "CherryPick-CherryPick La-Tu-Ma"
+      flavor: "Re:Lovers-Misskey La-Tu-Ma"
     _smashTestNotificationButton:
       title: "Test overflow"
       description: "Trigger the notification test repeatedly within an extremely short time"
     _tutorialCompleted:
-      title: "CherryPick Elementary Course Diploma"
+      title: "Re:Lovers Elementary Course Diploma"
       description: "Tutorial completed"
 _role:
   new: "New role"
@@ -1869,7 +1869,7 @@ _registry:
   domain: "Domain"
   createKey: "Create key"
 _aboutMisskey:
-  about: "CherryPick is a customization client based on Misskey that has been in development since 2021."
+  about: "Re:Lovers is a custom client based on "Misskey" and "CherryPick" and developed by @164-life and 1641project since 2023."
   contributors: "Main contributors"
   allContributors: "All contributors"
   source: "Source code"
@@ -1882,7 +1882,7 @@ _aboutMisskey:
     serverStatus: "Server Status"
     donate: "Donate to Kokonect"
   _cherrypick:
-    about: "This Misskey was customized by NoriDev!"
+    about: "This Misskey was customized by 1641project @164-life NoriDev!"
     translation: "Translate CherryPick"
     donate: "Donate to CherryPick"
     relayServer: "Relay Server"
@@ -1894,7 +1894,7 @@ _displayOfSensitiveMedia:
 _mfm:
   cheatSheet: "MFM Cheatsheet"
   intro: "MFM is a Misskey-exclusive markup language that can be used in many places. Here you can view a list of all available MFM syntax."
-  dummy: "CherryPick expands the world of the Fediverse"
+  dummy: "Re:Lovers expands the world of the Fediverse"
   mention: "Mention"
   mentionDescription: "You can specify a user by using an At-Symbol and a username."
   hashtag: "Hashtag"
